--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,41 @@
-<h2>Sign up</h2>
+<h1>Sign up</h1>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="row">
+    <div class="col-lg-6 col-md-12 col-sm-12">
+      <%= f.label :first_name, class: "form-label" %>
+      <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", class: "form-control" %>
+    </div>
+    <div class="col-lg-6 col-md-12 col-sm-12">
+      <%= f.label :last_name, class: "form-label" %>
+      <%= f.text_field :last_name, autocomplete: "family_name", class: "form-control" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <div class="row mt-2">
+    <div class="col">
+      <%= f.label :email, class: "form-label" %>
+      <%= f.email_field :email, autocomplete: "email", class: "form-control" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="row mt-2">
+    <div class="col">
+      <%= f.label :password, class: "form-label" %>
+      <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %>
+      <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+    </div>
+    <div class="col">
+      <%= f.label :password_confirmation, class: "form-label" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class:" form-control" %>
+    </div>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="actions mt-5 text-center">
+    <%= f.button fa_icon("check", text: "Sign up"), class: "btn btn-success" %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
