--- a/app/views/marks/index.html.erb
+++ b/app/views/marks/index.html.erb
@@ -1,32 +1,38 @@
 <h1>Marks</h1>
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>
-        date
-      </th>
-      <th>
-        time
-      </th>
-      <th>
-        kind
-      </th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @marks.each do |mark| %>
+<div class="float-right mb-5">
+  <%= link_to fa_icon("plus", text: "New mark"), new_mark_path, class: 'btn btn-success btn-lg' %>
+</div>
+
+<div class="table-responsive">
+  <table class="table table-dark table-striped">
+    <thead>
       <tr>
-        <td>
-          <%= mark.date.strftime('%d/%m/%Y') %>
-        </td>
-        <td>
-          <%= mark.time.strftime('%H:%M') %>
-        </td>
-        <td>
-          <%= mark.kind.titleize %>
-        </td>
+        <th class="text-center">
+          Date
+        </th>
+        <th class="text-center">
+          Time
+        </th>
+        <th class="text-center">
+          Kind
+        </th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @marks.each do |mark| %>
+        <tr>
+          <td>
+            <%= mark.date.strftime('%d/%m/%Y') %>
+          </td>
+          <td>
+            <%= mark.datetime.strftime('%H:%M') %>
+          </td>
+          <td>
+            <%= mark.kind.titleize %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
