story: Marks controller and views

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -36,6 +36,6 @@
   </div>
 
   <div class="actions mt-5 text-center">
-    <%= f.button fa_icon("check", text: "Sign up"), class: "btn btn-success" %>
+    <%= f.button fa_icon("check", text: "Sign up"), class: "btn btn-success btn-lg" %>
   </div>
 <% end %>
