--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -1,4 +1,27 @@
 h1 {
-  text-align: center;
+  font-size: 5rem;
   margin-bottom: 2rem;
+  text-align: center;
+}
+
+a,
+p,
+td,
+th {
+  font-size: 1.75rem;
+}
+
+th {
+  background-color: #007bff;
+  color: white;
+}
+
+.navbar-brand {
+  font-size: 1.75rem;
+}
+
+@media (min-width: 600px) {
+  .container {
+    max-width: 2100px;
+  }
 }
