--- a/app/views/marks/_form.html.erb
+++ b/app/views/marks/_form.html.erb
@@ -5,18 +5,14 @@
     <%= form.text_field :kind, placeholder: :kind, class: "form-control", presence: true %>
   </div>
 
-  <div>
-    <b>Date:</b> <%= @mark.date.strftime('%d/%m/%Y') %>
-  </div>
-  <div>
-    <b>Time:</b> <%= @mark.time.strftime('%Hh%M') %>
-  </div>
-  <div>
-    <b>Kind:</b> <%= @mark.kind %>
-  </div>
+  <p class="mb-0"><b>Date:</b> <%= @mark.date.strftime('%d/%m/%Y') %></p>
+  <p class="mb-0"><b>Time:</b> <%= @mark.time.strftime('%Hh%M') %></p>
+  <p><b>Kind:</b> <%= @mark.kind %></p>
 
 
   <div class="actions mt-5 text-center">
-    <%= form.submit fa_icon("check", text: "Mark time"), class: "btn btn-success btn-lg" %>
+    <%= button_tag(class:  "btn btn-success btn-lg") do %>
+      <%= fa_icon("check", text: "Mark time") %>
+    <% end %>
   </div>
 <% end %>
