tech: Change fields to be responsive

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="/">Time manager</a>
     <div class="d-flex">
-      <%= link_to fa_icon("sign_out", text: "Sign out"), destroy_user_session_path, method: :delete, class: 'text-decoration-none' %>
+      <%= link_to fa_icon("sign_out", text: "Sign out"), destroy_user_session_path, method: :delete, class: "text-decoration-none text-white" %>
     </div>
   </div>
 </nav>
