--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,34 +4,32 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="row">
-    <div class="col-lg-6 col-md-12 col-sm-12">
-      <%= f.label :first_name, class: "form-label" %>
-      <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", class: "form-control" %>
-    </div>
-    <div class="col-lg-6 col-md-12 col-sm-12">
-      <%= f.label :last_name, class: "form-label" %>
-      <%= f.text_field :last_name, autocomplete: "family_name", class: "form-control" %>
+    <div class="col">
+      <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", class: "form-control form-control-lg", placeholder: "First name" %>
     </div>
   </div>
 
-  <div class="row mt-2">
-    <div class="col">
-      <%= f.label :email, class: "form-label" %>
-      <%= f.email_field :email, autocomplete: "email", class: "form-control" %>
+  <div class="row">
+    <div class="col mt-3">
+      <%= f.text_field :last_name, autocomplete: "family_name", class: "form-control form-control-lg", placeholder: "Last name" %>
     </div>
   </div>
 
-  <div class="row mt-2">
+  <div class="row mt-3">
     <div class="col">
-      <%= f.label :password, class: "form-label" %>
-      <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %>
-      <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+      <%= f.email_field :email, autocomplete: "email", class: "form-control form-control-lg", placeholder: "E-mail" %>
     </div>
-    <div class="col">
-      <%= f.label :password_confirmation, class: "form-label" %>
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class:" form-control" %>
+  </div>
+
+  <div class="row">
+    <div class="col mt-3">
+      <%= f.password_field :password, autocomplete: "new-password", class: "form-control form-control-lg", placeholder: "Password (#{@minimum_password_length} characters minimum)" %>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col mt-3">
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class:" form-control form-control-lg", placeholder: "Password confirmation" %>
     </div>
   </div>
 
